--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+python-dotenv==1.1.1
 python-engineio==4.12.2
 python-socketio==5.13.0
 requests==2.32.5
