--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,32 @@
+annotated-types==0.7.0
 anyio==4.10.0
 bidict==0.23.1
 certifi==2025.8.3
 charset-normalizer==3.4.3
+distro==1.9.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+jiter==0.11.0
+numpy==2.3.3
+openai==1.108.1
+pandas==2.3.2
+pydantic==2.11.9
+pydantic_core==2.33.2
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-engineio==4.12.2
 python-socketio==5.13.0
+pytz==2025.2
 requests==2.32.5
 simple-websocket==1.1.0
+six==1.17.0
 sniffio==1.3.1
+tqdm==4.67.1
+typing-inspection==0.4.1
 typing_extensions==4.15.0
+tzdata==2025.2
 urllib3==2.5.0
 wa-automate-socket-client==1.2.0
 websocket-client==1.8.0
