--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,8 @@ typing-inspection==0.4.1
 typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
+uvicorn==0.30.0
+fastapi==0.111.0
 wa-automate-socket-client==1.2.0
 websocket-client==1.8.0
 wsproto==1.2.0
